# untrunc-android

./: .gitignore  README.md  README_ZH.md  build_ffmpeg_android.sh  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp  jni_bridge.h
app/src/main/cpp/untrunc_core/: common.cpp  common.h  file.cpp  file.h  mp4.cpp  mp4.h  track.cpp
app/src/main/java/com/untrunc/android/: MainActivity.kt  UntruncApplication.kt
app/src/main/java/com/untrunc/android/data/model/: FileInfo.kt  RepairProgress.kt  RepairResult.kt
app/src/main/java/com/untrunc/android/data/native/: UntruncEngine.kt
app/src/main/java/com/untrunc/android/data/repository/: RepairRepository.kt
app/src/main/java/com/untrunc/android/ui/screen/: HomeScreen.kt
app/src/main/java/com/untrunc/android/ui/theme/: Theme.kt
app/src/main/java/com/untrunc/android/ui/viewmodel/: RepairViewModel.kt
app/src/main/res/values/: strings.xml  themes.xml
